<resources>
    <string name="app_name">Yogi\'s Picnic Deli</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search by name, description or category</string>
    <string name="category_label">Category</string>
    <string name="description_label">Description</string>
    <string name="name_label">Name</string>
    <string name="cart_title">Cart</string>
    <string name="lbl_quantity_item_in_basket">Quantity of this in your basket:</string>
    <string name="label_total">Total</string>
    <string name="dialog_message_checkout">The total is: $ </string>
    <string name="yes">Checkout</string>
    <string name="not_yet">Back</string>
    <string name="stock_count_label">In stock</string>
    <string name="tap_to_change">(change)</string>

</resources>
